--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div id="piano">
+
+    </div>
+
+
     <script src="main.js"></script>
 </body>
 </html>
