--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
     <div id="piano">
+        <div class="black-keys">
 
+        </div>
+        <div class="white-keys">
+
+        </div>
     </div>
 
 
