--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
 </head>
 <body>
     <div id="piano">
-        <div class="black-keys">
+        <div class="keys">
+            <div class="black-keys">
 
+            </div>
+            <div class="white-keys">
+    
+            </div>
         </div>
-        <div class="white-keys">
 
-        </div>
     </div>
 
 
