add 10 div class key black-keys

--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
     <div id="piano">
         <div class="keys">
             <div class="black-keys">
-
+                <div class="key black-keys"></div>
+                <div class="key black-keys"></div>
+                <div class="key black-keys"></div>
+                <div class="key black-keys"></div>
+                <div class="key black-keys"></div>
+                <div class="key black-keys"></div>
+                <div class="key black-keys"></div>
+                <div class="key black-keys"></div>
+                <div class="key black-keys"></div>
+                <div class="key black-keys"></div>
             </div>
             <div class="white-keys">
     
