--- a/index.html
+++ b/index.html
@@ -10,19 +10,32 @@
     <div id="piano">
         <div class="keys">
             <div class="black-keys">
-                <div class="key black-keys"></div>
-                <div class="key black-keys"></div>
-                <div class="key black-keys"></div>
-                <div class="key black-keys"></div>
-                <div class="key black-keys"></div>
-                <div class="key black-keys"></div>
-                <div class="key black-keys"></div>
-                <div class="key black-keys"></div>
-                <div class="key black-keys"></div>
-                <div class="key black-keys"></div>
+                <div class="key black-key"></div>
+                <div class="key black-key"></div>
+                <div class="key black-key"></div>
+                <div class="key black-key"></div>
+                <div class="key black-key"></div>
+                <div class="key black-key"></div>
+                <div class="key black-key"></div>
+                <div class="key black-key"></div>
+                <div class="key black-key"></div>
+                <div class="key black-key"></div>
             </div>
             <div class="white-keys">
-    
+                <div class="key white-key"></div>
+                <div class="key white-key"></div>
+                <div class="key white-key"></div>
+                <div class="key white-key"></div>
+                <div class="key white-key"></div>
+                <div class="key white-key"></div>
+                <div class="key white-key"></div>
+                <div class="key white-key"></div>
+                <div class="key white-key"></div>
+                <div class="key white-key"></div>
+                <div class="key white-key"></div>
+                <div class="key white-key"></div>
+                <div class="key white-key"></div>
+                <div class="key white-key"></div>
             </div>
         </div>
 
